This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2001-11-29 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/Portability.hh: use config-openvms.h based on 
	__OPENVMS__ flag.

	* src/snprintf.c: replaced static_cast with C-style cast: this file
	should remain C only.

	* configure.in, Makefile.am: added openvms subdirectory.
	* openvms/Makefile.am: added empty Makefile template.

	* THANKS: added Tony Cheung.

	* src/Makefile.am: added snprintf.c to noinst_HEADERS.

	* include/log4cpp/TimeStamp.hh: moved class description to the 
	correct location.
		
2001-11-28 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/snprintf.c: added portable snprintf 2.2 from 
	http://www.ijs.si/software/snprintf/

	* src/OstringStream.cpp: replace alternative snprintf with one in
	snprintf.c.

	* src/snprintf.c: add static cast from void* to const char*.

	* include/log4cpp/config-openvms.h: added.
	
2001-11-26 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/TimeStamp.hh, include/log4cpp/Makefile.am,
	src/TimeStamp.cpp, src/Makefile.am: added micro second
	precise time stamp.
	* configure.in: added test for 'ftime()' function.
	* include/log4cpp/LoggingEvent.hh, include/log4cpp/PatternLayout.hh,
	src/LoggingEvent.cpp, src/BasicLayout.cpp, src/PatternLayout.cpp:
	Use new TimeStamp class.

	* tests/testPattern.cpp: included '%r' in test pattern.

	* src/SimpleConfigurator.cpp: added support for RemoteSyslogAppender.

	* bcb5/log4cpp/log4cpp.bpr, bcb5/log4cpp/log4cpp.bpf: Added TimeStamp
	class.

	* msvc6/log4cpp/log4cpp.dsp: Added TimeStamp, PatternLayout and 
	SimpleConfigurator classes.

	* include/log4cpp/RemoteSyslogAppender.hh: replaced #defines with
	enum.

	* include/log4cpp/config-win32.h: sync with #defines in 
	include/log4cpp/config.h.

	* tests/Makefile.am: made log4cpp.init check_DATA.

	* tests/testConfig.cpp: read $srcdir for location of log4cpp.init in